@@ -1,4 +1,4 @@
-CheckApp v0.1.1 dependencies
+CheckApp v0.1.2 dependencies
 ============================
 
 In order to run CheckApp, you need the following software:
