@@ -1,4 +1,4 @@
-CheckApp 0.1.1 Installation
+CheckApp 0.1.2 Installation
 ===========================
 
 To install CheckApp on a development server, you have to follow these steps:
