@@ -1,4 +1,4 @@
-CheckApp 0.1.1 (https://launchpad.net/checkapp)
+CheckApp 0.1.2 (https://launchpad.net/checkapp)
 ===============================================
 
 CheckApp is a social web application that allows people to check up the
